@@ -3,6 +3,8 @@ librun-parts-perl (0.09-2) UNRELEASED; urgency=medium
   * No more list dh-dist-zilla branch as packaging branch.
   * Remove debian/gbp.conf (no more needed)
   * Mark package as autopkgtestable via pkg-perl-autopkgtest/autodep8.
+  * Remove get-orig-source target from debian/rules. dh-dist-zilla
+    provides such a feature now.
 
  -- Axel Beckert <abe@debian.org>  Tue, 18 Aug 2015 03:05:56 +0200
 
